movie data sending is working

--- a/MovieRatingServer/Properties/launchSettings.json
+++ b/MovieRatingServer/Properties/launchSettings.json
@@ -24,7 +24,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7090;http://localhost:5143",
+      "applicationUrl": "https://localhost:7090;http://localhost:5143;https://192.168.86.90:7090",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
